@@ -15,6 +15,7 @@ munin (work)
     COUNTER->DERIVE et al.)
   * Added new config option "local_address", to specify which local address
     outgoing connections (from munin-update) should be used.
+  * New wildcard plugin generic/ping_ to graph ping times.
 
 munin (1.1.4)
 
